--- a/Feedbacksystem/templates/pages/users.html
+++ b/Feedbacksystem/templates/pages/users.html
@@ -75,7 +75,7 @@
                     {% if user.faculty_name %}
                         {{ user.faculty_name }}
                     {% endif %}
-                    {% if user.is_superuser %}
+                    {% if user.is_staff %}
                         {{user.username}}
                     {% endif %}
                 </td>
