--- a/Feedbacksystem/templates/pages/facultyeval.html
+++ b/Feedbacksystem/templates/pages/facultyeval.html
@@ -1,29 +1,33 @@
 {% extends "pages/home.html" %}
 
-{% block title %}Faculty Evaluation{% endblock %}
+{% block title %}Student Evaluation for Teachers{% endblock %}
 
 {% block header %}
-<div class="container">
-    <div class="row pt-1">
-        <div class="col-lg-4 col-sm-8 ">
-            <h2>Faculty Evaluation</h2>
+    <div class="row container">
+        <div  class="col-md-6 col-12">
+            <h2>Student Evaluation for Teachers</h2>
         </div>
 {% if evaluation_status.evaluation_status == "In Progress" %} 
-        <div class="container col-lg-8 col-sm-4 ">
-            <div style="padding: 0.2em 0;">
-                <select id="faculty-select" onchange="redirectToEvaluation(this)">
-                    <option value="{}">Select Faculty</option> <!-- Placeholder option -->
-                    {% for i in section_subjects_faculty %}
-                    <option 
-                        value="{% url 'evaluate_subject_faculty' i.pk %}"
-                        {% if i.faculty.pk in evaluated_faculty_ids %} style="color: green; font-weight: bold;" {% endif %}>
-                    {{ i.faculty.full_name }}
-                        {% if i.faculty.pk in evaluated_faculty_ids %} ✔️ {% endif %}
-                    </option>
-                    {% endfor %}
-                </select>
-            </div>
-        </div>
+      
+           
+                <div class="col-md-5 col-12">
+                    <div style="padding: 0.3em 0;" >
+                        <select id="faculty-select" onchange="redirectToEvaluation(this)">
+                            <option value="{}">Select Faculty</option> <!-- Placeholder option -->
+                            {% for i in section_subjects_faculty %}
+                            <option
+                                value="{% url 'evaluate_subject_faculty' i.pk %}"
+                                {% if i.faculty.pk in evaluated_faculty_ids %} style="color: green; font-weight: bold;" {% endif %}>
+                            {{ i.faculty.full_name }}
+                                {% if i.faculty.pk in evaluated_faculty_ids %} ✔️ {% endif %}
+                            </option>
+                            {% endfor %}
+                        </select>
+                    </div>
+                            </div>
+                                </div>
+                </div>
+                
         <script>
             function redirectToEvaluation(selectElement) {
                 var selectedValue = selectElement.value;
@@ -32,7 +36,7 @@
                 }
             }
         </script>
-    </div>
+
 {% endif %}
     <hr>
 {% endblock header %}
@@ -48,39 +52,41 @@
 
 {% endif %}
 {% if evaluation_status.evaluation_status == "In Progress" %}  
-<div class="pt-1 pb-1 mb-2">
-<h3>General Evaluation of the Faculty</h3>
-</div>
-<div class="pt-1 pb-1  mb-2">
-    <h4>Instructions:</h4>
-</div>
-<div class="pt-1 pb-1  mb-2">
-    <p>1. For each of the items listed check the rating which best describes YOUR OWN assessment of the faculty. Use the scale below:
-    </p>
-</div>
-    <div class="col-md-9 col-12 pt-1 pb-1 mb-2 mx-auto table-responsive">
-        <table class=" table table-bordered table-responsive">
-            <tr>
-                <td>5 - Outstanding </td>
-                <td>4 - Very Satisfactory </td>
-                <td>3 - Satisfactory </td>
-                <td>2 - Unatisfactory </td>
-                <td>1 - Poor </td>
-            </tr>
-        </table>
-    </div>
-
-    <div class="pt-1 pb-1  mb-2">
-<p>2. Read the major items and sub-items carefully before you decide; and
-    </p>
+<div class="container">
+    <div class="pt-1 pb-1 mb-2">
+    <h3>General Evaluation of the Faculty</h3>
     </div>
     <div class="pt-1 pb-1  mb-2">
-<p>3. Evaluate each indicator separately without considering other characteristics or your general opinion of the teacher.
-    </p>
-</div>
-    {% else %}
-
-    <p>Student Evaluations for Teachers have ended. Stay tuned for announcements regarding the next evaluation period. </p>
-    {% endif %}
+        <h4>Instructions:</h4>
+    </div>
+    <div class="pt-1 pb-1  mb-2">
+        <p>1. For each of the items listed check the rating which best describes YOUR OWN assessment of the faculty. Use the scale below:
+        </p>
+    </div>
+        <div class="col-md-9 col-12 pt-1 pb-1 mb-2 mx-auto table-responsive">
+            <table class=" table table-bordered table-responsive">
+                <tr>
+                    <td>5 - Outstanding </td>
+                    <td>4 - Very Satisfactory </td>
+                    <td>3 - Satisfactory </td>
+                    <td>2 - Unatisfactory </td>
+                    <td>1 - Poor </td>
+                </tr>
+            </table>
+        </div>
+    
+        <div class="pt-1 pb-1  mb-2">
+    <p>2. Read the major items and sub-items carefully before you decide; and
+        </p>
+        </div>
+        <div class="pt-1 pb-1  mb-2">
+    <p>3. Evaluate each indicator separately without considering other characteristics or your general opinion of the teacher.
+        </p>
+    </div>
+        {% else %}
+    
+        <p>Student Evaluations for Teachers have ended. Stay tuned for announcements regarding the next evaluation period. </p>
+        {% endif %}
+    </div>
 </div>
 {% endblock feature %}
