--- a/Feedbacksystem/templates/pages/facultylogin.html
+++ b/Feedbacksystem/templates/pages/facultylogin.html
@@ -24,8 +24,8 @@
     {% endfor %}
     </div>
     {% endif %}
-    <div class="container-body mb-5" id="container">
-        
+    <div class="container-body faculty-login mb-5" id="container">
+      
         <div class="form-container sign-up" {% if request.POST and 'register' in request.POST %} id="active" {% endif %}>
             <form method="POST" action="">
     
