--- a/Feedbacksystem/static/css/login_page.css
+++ b/Feedbacksystem/static/css/login_page.css
@@ -354,27 +354,26 @@ h5{
 }
 }
 @media only screen and (max-width:590px) { 
-    @media only screen and (max-width:590px) { 
-       
-        .center{
-            margin-left: 1.3em;
-        }
-        .container{
-            width: 29em;
-        }
-       .container p{
-            font-size: 0.70em;
-            line-height: 0.8em;
-            margin: 1em 0;
-            margin-left: 2em;
-        }
-        .container button{
-          
-            font-size: 0.5em;
-            padding: 0.4rem 2rem;
-            margin-top: 0.625rem;
-            cursor: pointer;
-        }
+    @media only screen and (max-width:590px) {    
+    .center{
+        margin-left: 1.3em;
+    }
+    .container{
+        width: 29em;
+    }
+    .container p{
+        font-size: 0.70em;
+        line-height: 0.8em;
+        margin: 1em 0;
+        margin-left: 2em;
+    }
+    .container button{
+        
+        font-size: 0.5em;
+        padding: 0.4rem 2rem;
+        margin-top: 0.625rem;
+        cursor: pointer;
+    }
     .container input{
         padding: 0.5em 0.75em;
         font-size: 0.85em;
@@ -441,6 +440,9 @@ h5{
     .container-body{
         width: 23em;
         min-height: 17em;
+    }
+    .faculty-login{
+        margin-bottom: 7rem !important;
     }
     .container-body p{
         font-size: 0.60em;
