--- a/Feedbacksystem/templates/pages/adminlogin.html
+++ b/Feedbacksystem/templates/pages/adminlogin.html
@@ -34,7 +34,7 @@
       {% endfor %}
   </div>
   {% endif %}
-<div class="container-body">
+<div class="container-body mb-5 faculty-login">
    
 <form method="POST" action="">
     {% csrf_token %}
