--- a/Feedbacksystem/templates/pages/faculty_events.html
+++ b/Feedbacksystem/templates/pages/faculty_events.html
@@ -41,8 +41,8 @@
       <h5 class="card-title">{{event.title}}</h5>
       <h6 class="card-subtitle mb-2 text-body-secondary">{{event.date}}</h6>
       <p class="card-text">{{i.description|slice:":70"}}...</p>
-      {% if event.evaluation_status %}
-      {% if event.requires_attendance %}
+      {% if event.evaluation_status == 'Ongoing' %}
+        {% if event.requires_attendance %}
           {% if event.attended %}
             <a href="{% url 'faculty_event_detail' event.pk %}" class="card-link btn custom-btn">Evaluate</a>
           {% else %}
