--- a/Feedbacksystem/templates/pages/admin_faculty_evaluations.html
+++ b/Feedbacksystem/templates/pages/admin_faculty_evaluations.html
@@ -4,7 +4,7 @@
 
 {% block header %}
 
-    <h2>Faculty Evaluations: {{current_academic_year}} {{current_semester}} Semester</h2>
+<h2>Faculty Evaluations: {{current_academic_year}} {{current_semester}}</h2>
 
 
 <hr>
