--- a/Feedbacksystem/templates/pages/edit_school_event_form.html
+++ b/Feedbacksystem/templates/pages/edit_school_event_form.html
@@ -20,7 +20,7 @@
 {% endfor %}
 
 {% endif %}
-<table class="table table-responsive " >
+<table class="table table-responsive table-bordered " >
     <tr>
         <th scope="col"style="color:#fafafa; background: #2a9134">Question</th>
         <th  scope="col"style="color:#fafafa; background: #2a9134">Options</th>
