--- a/Feedbacksystem/templates/pages/students.html
+++ b/Feedbacksystem/templates/pages/students.html
@@ -99,8 +99,8 @@
   </div>
   </form>
   </div>
-  <div class="table-responsive mt-2">
-    <table class="table table-bordered table-sm text-center align-middle">
+  <div class="table-responsive mt-1">
+    <table class="table table-bordered table-sm  align-middle">
       <thead class="table-light">
         <tr>
           <th scope="col" style="width: 5%;">#</th>
