--- a/Feedbacksystem/templates/pages/login.html
+++ b/Feedbacksystem/templates/pages/login.html
@@ -8,35 +8,53 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="icon" href="static/images/cvsulogo.png" type="image/png">
-    <link rel="stylesheet" href="{%static 'css/login_page.css' %}">
+    <link rel="stylesheet" href="{% static 'css/login_page.css' %}">
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
-   
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <title>Feedback and Evaluation System - CvSU Bacoor Campus</title>
 </head>
 
 <body>
-        {% if messages %}
-        <div class="container col-md-6 col-12 message_container">
-            {% for message in messages %}
-            <div class="alert {% if message.tags == 'error' %}alert-danger{% elif message.tags == 'success' %}alert-success{% endif %}" role="alert">
-                {{ message }}
-            </div>
-            {% endfor %}
+    {% if messages %}
+    <div class="container col-md-6 col-12 message_container">
+        {% for message in messages %}
+        <div class="alert alert-dismissible {% if message.tags == 'error' %}alert-danger{% elif message.tags == 'success' %}alert-success{% endif %}" role="alert">
+            {{ message }}
         </div>
-        {% endif %}
+        {% endfor %}
+    </div>
+    {% endif %}
 
-    <div class="container-body " id="container">
-
+    <div class="container-body" id="container">
         <div class="form-container sign-up" {% if request.POST and 'register' in request.POST %} id="active" {% endif %}>
             <form method="POST" action="">
-    
                 <br>
                 {% csrf_token %}
-                {{ registration_form.as_p }}
-                
-                
-                <button onclick="showAlert()" type = "Submit" name="register"><b>Register</b></button>
-          
+                <div class="container registration__form__container">
+                    <div class="mb-2">
+                        {{ registration_form.student_number.label_tag }}
+                        {{ registration_form.student_number }}
+                    </div>
+                    <div class="mb-2 position-relative ">
+                        {{ registration_form.password1.label_tag }}
+                        <div class="input-group form__input">
+                            {{ registration_form.password1 }}
+                            <button type="button" class="btn btn-light toggle-password" data-target="id_password1">
+                                <i class="bi bi-eye"></i>
+                            </button>
+                        </div>
+                    </div>
+                    <div class="mb-2 position-relative">
+                        {{ registration_form.password2.label_tag }}
+                        <div class="input-group form__input">
+                            {{ registration_form.password2 }}
+                            <button type="button" class="btn btn-light toggle-password" data-target="id_password2">
+                                <i class="bi bi-eye"></i>
+                            </button>
+                        </div>
+                    </div>
+                  </div>
+                <button onclick="showAlert()" type="Submit" class="form___button" name="register">Register</button>
             </form>
         </div>
         <div class="form-container sign-in" {% if request.POST and 'login' in request.POST %} id="active" {% endif %}>
@@ -44,78 +62,106 @@
                 <h1>CvSU</h1>
                 <h5 class="center"><small>Feedback and Evaluation System</small></h5>
                 <h5 class="center">Student Login</h5>
-              
                 {% csrf_token %}
-                {{ login_form.as_p }}
+                
+                    <div class="container d-flex flex-column align-items-center login__form__container">
+                        <div class="mb-2">
+                            {{ login_form.student_number.label_tag }}
+                            {{ login_form.student_number }}
+                        </div>
+                        <div class="mb-2 position-relative">
+                            {{ login_form.password.label_tag }}
+                            <div class="input-group form__input">
+                                {{ login_form.password }}
+                                <button type="button" class="btn btn-light toggle-password" data-target="id_password">
+                                    <i class="bi bi-eye"></i>
+                                </button>
+                            </div>
+                        </div>
+                    </div>
                 <a id="resetpw" href="{% url 'password_reset' %}">Forgot Your Password?</a>
-                <button type = "Submit" name = "signin"><b>Sign In </b></button>
+                <button type="Submit" name="signin" class="form___button">Sign In</button>
                 <div class="dropdown">
                     <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="false">
-                      Sign in as
+                        Sign in as
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-                      <li><a class="dropdown-item" href="{% url 'facultylogin' %}" style="color: black;">Faculty</a></li>
-                      <li><a class="dropdown-item" href="{% url 'adminlogin' %}"style="color: black;">Admin</a></li>
+                        <li><a class="dropdown-item" href="{% url 'facultylogin' %}" style="color: black;">Faculty</a></li>
+                        <li><a class="dropdown-item" href="{% url 'adminlogin' %}" style="color: black;">Admin</a></li>
                     </ul>
-                  </div>
+                </div>
             </form>
         </div>
         <div class="toggle-container">
             <div class="toggle">
                 <div class="toggle-panel toggle-left">
                     <div>
-                    <h1>Creating Account</h1>
-                  <ul>
-                    <li>Provide the requested information to register</li>
-                  
-                    <li>Make sure to enter valid student number and password</li>
-                   
-                    <li>Information must match our record</li>
-
-                  </ul>
-                </div>
-                
-                    <button class="hidden" id="login">Sign In</button>
+                        <h2 class="toggle-panel__header">Creating Account</h2>
+                        <ul>
+                            <li>Provide the requested information to register</li>
+                            <li>Make sure to enter valid student number and password</li>
+                            <li>Information must match our record</li>
+                        </ul>
+                    </div>
+                    <button class="hidden form___button" id="login">Sign In</button>
                 </div>
                 <div class="toggle-panel toggle-right">
-                    <h1>Trouble logging into your account?</h1>
-                   <ul>
-                    <li>Make sure to enter valid student number and password</li>
-        
-                    <li>Information must match our record</li>
-
-                    <li>Account must be activated</li>
-
-                   </ul>
-                  
-                    <button class="hidden" id="register">REGISTER</button>
+                    <h2 class="toggle-panel__header toggle-panel__header__right">Trouble logging into your account?</h2>
+                    <ul>
+                        <li>Make sure to enter valid student number and password</li>
+                        <li>Information must match our record</li>
+                        <li>Account must be activated</li>
+                    </ul>
+                    <button class="hidden form___button" id="register">REGISTER</button>
                 </div>
             </div>
         </div>
     </div>
-<div class="row align-items-center justify-content-center g-0">
-    <div class="col-lg-10 col-md-9 col-sm-9 col-9">
-        <p class="feedback-note">For visitors, Share your experience by filling out our <b>Stakeholder Feedback Form</b> to help us improve our services. Simply scan the QR code or <a href="{% url 'stakeholder_feedback_form' %}">click here</a> to get started.</p>
+    <div class="row align-items-center justify-content-center g-0">
+        <div class="col-lg-10 col-md-9 col-sm-9 col-9">
+            <p class="feedback-note">For visitors, Share your experience by filling out our <b>Stakeholder Feedback Form</b> to help us improve our services. Simply scan the QR code or <a href="{% url 'stakeholder_feedback_form' %}">click here</a> to get started.</p>
+        </div>
+        <div class="col-lg-2 col-md-2 col-sm-2 col-3 stakeholderform_qrcode">
+            <img src="{% static 'images/CvSU_Stakeholder_Feedback_Form.jpg' %}" alt="CvSU Bacoor Stakeholder Form QR Code" height="80px" width="80px">
+        </div>
     </div>
-    <div class="col-lg-2 col-md-2 col-sm-2 col-3 stakeholderform_qrcode "><img src="{% static 'images/CvSU_Stakeholder_Feedback_Form.jpg' %}" alt="CvSU Bacoor Stakeholder Form QR Code" height="80px" width="80px"></div>
-</div>
 
-<script src="{%static 'js/scripts.js' %}">
-</script>
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
-integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous">
-</script>
+    <script src="{% static 'js/scripts.js' %}"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.min.js" integrity="sha384-7VPbUDkoPSGFnVtYi0QogXtr74QeVeeIs99Qfg5YCF+TidwNdjvaKZX19NZ/e6oz" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.min.js"
-integrity="sha384-7VPbUDkoPSGFnVtYi0QogXtr74QeVeeIs99Qfg5YCF+TidwNdjvaKZX19NZ/e6oz" crossorigin="anonymous">
-
-</script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-
-
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+    <script>
+        document.addEventListener('DOMContentLoaded', () => {
+            const toggleButtons = document.querySelectorAll('.toggle-password');
+            if (toggleButtons.length === 0) {
+                console.warn('No toggle-password buttons found.');
+                return;
+            }
+    
+            toggleButtons.forEach(button => {
+                button.addEventListener('click', function () {
+                    const targetId = this.dataset.target;
+                    const input = document.getElementById(targetId);
+                    const icon = this.querySelector('i');
+    
+                    if (input) {
+                        if (input.type === 'password') {
+                            input.type = 'text';
+                            icon.classList.replace('bi-eye', 'bi-eye-slash');
+                        } else {
+                            input.type = 'password';
+                            icon.classList.replace('bi-eye-slash', 'bi-eye');
+                        }
+                    } else {
+                        console.error(`No input field found with id ${targetId}`);
+                    }
+                });
+            });
+        });
+    </script>
 
 </body>
 
