Update faculty model and forms: enhance contact number length, add gender and educational attainment choices, and improve form labels and widgets

--- a/Feedbacksystem/templates/pages/facultylogin.html
+++ b/Feedbacksystem/templates/pages/facultylogin.html
@@ -80,7 +80,7 @@
                 </div>
                 <a id="resetpw" href="{% url 'password_reset' %}">Forgot Your Password?</a>
                 <button type = "Submit" name = "signin" class="form___button">Sign In</button>
-                <div class="dropdown">
+                <div class="btn-group dropup">
                     <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="false">
                       Sign in as
                     </a>
