--- a/Feedbacksystem/templates/pages/login.html
+++ b/Feedbacksystem/templates/pages/login.html
@@ -81,7 +81,7 @@
                     </div>
                 <a id="resetpw" href="{% url 'password_reset' %}">Forgot Your Password?</a>
                 <button type="Submit" name="signin" class="form___button">Sign In</button>
-                <div class="dropdown">
+                <div class="btn-group dropup">
                     <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="false">
                         Sign in as
                     </a>
@@ -117,7 +117,7 @@
             </div>
         </div>
     </div>
-    <div class="row align-items-center justify-content-center g-0">
+    <div class="row align-items-center justify-content-center g-0 mb-3">
         <div class="col-lg-10 col-md-9 col-sm-9 col-9">
             <p class="feedback-note">For visitors, Share your experience by filling out our <b>Stakeholder Feedback Form</b> to help us improve our services. Simply scan the QR code or <a href="{% url 'stakeholder_feedback_form' %}">click here</a> to get started.</p>
         </div>
