--- a/Feedbacksystem/templates/pages/password_reset.html
+++ b/Feedbacksystem/templates/pages/password_reset.html
@@ -38,7 +38,7 @@
 <form method="POST" action="">
     {% csrf_token %}
     <a  class="admin"  style="margin-right: 1em;"href = "{% url 'signin' %}"> <i class="bi bi-arrow-bar-left"></i> Back to Login </a> 
-    <p class="w-50 pb-2 ">Forgotten your password? Enter your email address below, and we’ll email instructions for setting a new one.</p>
+    <p class="mt-2">Forgotten your password? Enter your email address below, and we’ll email instructions for setting a new one.</p>
 <div class="mb-5">{{form}}
     <input   class="admininput" type = "submit" value="Submit" style="font-weight: bold;"> 
 </div>
