Add student archiving functionality and update related templates and migrations

--- a/Feedbacksystem/templates/pages/admin.html
+++ b/Feedbacksystem/templates/pages/admin.html
@@ -128,7 +128,7 @@
             <div class="card">
               <div class="card-body">
                 <h5 class="card-title" style="text-align: center;">{{ total_user }}</h5>
-                <p class="card-text" style="text-align: center;"><small>Total Registered Users</small></p>
+                <p class="card-text" style="text-align: center;"><small>Total Users</small></p>
               </div>
             </div>
           </div>
@@ -235,7 +235,7 @@
         </div>
         <div class="col-md-6">
           <div id="chart-container">
-            <h5>Total Responses per Year/Semester</h5>
+            <h5>Total Responses per Semester</h5>
             <canvas id="evaluationChart"></canvas>
           </div>
         </div>
