--- a/Feedbacksystem/templates/pages/faculty.html
+++ b/Feedbacksystem/templates/pages/faculty.html
@@ -53,10 +53,10 @@
     </div>
   </div>
 
-  <div class="row">
+  <div class="row g-1">
     <div class="col-lg-2 col-md-3 col-6 mt-1"><button type="button" class="btn btn-warning custom-btn" style = "color: black; text-decoration: none; " data-bs-toggle="modal" data-bs-target="#exampleModal"></a><i class="bi bi-person-plus-fill"></i> <b>Add Faculty</b></button></div>
 
-    <div class="col-lg-3 col-md-3 col-6 mt-1" >
+    <div class="col-lg-2 col-md-3 col-6 mt-1" >
       <button type="button" class="btn btn-warning custom-btn" style="color: black; text-decoration: none;" data-bs-toggle="modal" data-bs-target="#filterModal">
         <i class="bi bi-pencil-square"></i> <b>Filter Options</b>
       </button>
