--- a/Feedbacksystem/templates/pages/facultydashboard.html
+++ b/Feedbacksystem/templates/pages/facultydashboard.html
@@ -46,7 +46,7 @@
           <li class="list-group-item"><b>Email: </b>{{ faculty.email }}</li>
           <li class="list-group-item"><b>Contact Number: </b>{{ faculty.contact_number }}</li>
           <li class="list-group-item"><b>Department: </b>{{ faculty.department }}</li>
-          <li class="list-group-item"><b>Role: </b>{% if is_head_of_osas %} Head of OSAS {% elif is_department_head %} Department Head {% else %} Faculty {% endif %}</li>
+          <li class="list-group-item"><b>Role: </b>{% if is_head_of_osas %} Head of OSAS {% elif is_department_head %} Department Head/Program Coordinator {% else %} Faculty {% endif %}</li>
       </ul>
       </div>
       <div class="modal-footer">
