--- a/Feedbacksystem/templates/pages/students.html
+++ b/Feedbacksystem/templates/pages/students.html
@@ -1,11 +1,11 @@
 {% extends "pages/admin.html" %}
 
-{% block title %}Active Students{% endblock %}
+{% block title %}Enrolled Students{% endblock %}
 
 {% block header %}
         <div class="row">
           <div class="col-md-5">
-            <h2>Active Students</h2>
+            <h2>Enrolled Students</h2>
           </div>
           <div class="col-lg-6 col-md-7 col-12 mt-1 "  style="margin-left: auto;">
             <form method="get" action="" class="d-flex" style="gap: 1em;">
@@ -59,10 +59,10 @@
   
   <div class="col-lg-2 col-md-3 col-6 mb-2">
     <button type="button" class="btn btn-warning custom-btn" data-bs-toggle="modal" data-bs-target="#filterModal">
-      <i class="bi bi-pencil-square"></i> <b>Filter Options</b>
+      <i class="bi bi-pencil-square"></i> <small><b>Filter Options</b></small>
     </button>
   </div>
-  
+
   <div class="modal fade" id="filterModal" tabindex="-1" aria-labelledby="filterModalLabel" aria-hidden="true">
     <div class="modal-dialog">
       <div class="modal-content">
@@ -98,7 +98,13 @@
     </button>
   </div>
   </form>
+  <div class="col-lg-2 col-md-3 col-6 mb-2">
+    <a href="{% url 'archived_students' %}" type="button" class="btn btn-secondary">
+      <i class="bi bi-archive-fill"></i> <small><b>Archived Students</b></small>
+    </a>
   </div>
+  </div>
+  
   <div class="table-responsive mt-1">
     <table class="table table-bordered table-sm  align-middle">
       <thead class="table-light">
@@ -135,8 +141,8 @@
               <i class="bi bi-pencil-square"></i>
             </a>
             <!-- Delete Button -->
-            <a href="{% url 'deleteStudent' i.pk %}" class="btn btn-danger btn-sm">
-              <i class="bx bxs-trash"></i>
+            <a href="{% url 'archive_student' i.pk %}" class="btn btn-secondary btn-sm">
+              <i class="bi bi-archive-fill"></i>
             </a>
           </td>
         </tr>
